# haskell-resrobot

./: .gitignore  LICENSE  resrobot.cabal  stack.yaml
src/: Resrobot.hs
src/Resrobot/: Lens.hs  Types.hs  Utils.hs
test/: Spec.hs
test/Resrobot/: Arbitrary.hs  TypesSpec.hs
