name:                resrobot
version:             0.2.0.0
synopsis:            Provides Haskell bindings for the Resrobot APIs from http://trafiklab.se
description:         Please see README.md
homepage:            https://github.com/jmickelin/resrobot#readme
license:             BSD3
license-file:        LICENSE
author:              Jonne Mickelin Sätherblom
maintainer:          jonne@ljhms.se
copyright:           BSD3
category:            Misc
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:      Resrobot
                      , Resrobot.Lens
                      , Resrobot.Types
                      , Resrobot.Utils
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , http-api-data
                     , http-client
                     , http-client-tls
                     , microlens
                     , microlens-th
                     , servant
                     , servant-client >= 0.9
                     , text
  default-language:    Haskell2010

test-suite resrobot-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Resrobot.TypesSpec
                     , Resrobot.Arbitrary
  build-depends:       base
                     , resrobot
                     , aeson
                     , tasty
                     , tasty-hunit
                     , tasty-quickcheck
                     , text
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jmickelin/resrobot
